# crates-mcp

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: documentation.rs  error.rs  generate.rs  handler.rs  item.rs  item_kind.rs  main.rs  method.rs  parser.rs  router.rs  subcommand.rs
src/subcommand/: list.rs  lookup.rs  server.rs
