[package]
name = "crates-mcp"
description = "A model context protocol server implementation for retrieving information about Rust crates"
edition = "2024"
version = "0.1.0"

[dependencies]
anyhow = "1.0.99"
regex = "1.11.2"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "transport-io"] }
scraper = "0.24.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
